# CppProgramming

RecognizingSwimmingPoolOnSatelliteImages/: DacudaTest.sln  README  Readme.docx
RecognizingSwimmingPoolOnSatelliteImages/DacudaTest/: DacudaTest.vcxproj  DacudaTest.vcxproj.filters  SwimmingPool.cpp  SwimmingPool.h  main.cpp
helloworld_opencv_mingw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  line_command_hello.bat
